--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxt/typescript-runtime": "^2.0.0",
     "@nuxtjs/axios": "^5.12.2",
     "core-js": "^3.6.5",
+    "js-file-downloader": "^1.1.15",
     "nuxt": "^2.14.6"
   },
   "devDependencies": {
@@ -23,6 +24,7 @@
     "@nuxt/typescript-build": "^2.0.3",
     "@nuxtjs/markdownit": "^1.2.10",
     "@nuxtjs/tailwindcss": "^3.1.0",
+    "@types/papaparse": "^5.2.4",
     "@vue/test-utils": "^1.1.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^26.5.0",
@@ -33,6 +35,7 @@
     "lodash": "^4.17.20",
     "markdown-it-attrs": "^3.0.3",
     "markdown-it-div": "^1.1.0",
+    "papaparse": "^5.3.0",
     "prettier": "^2.1.2",
     "simple-analytics-vue": "^1.1.1",
     "ts-jest": "^26.4.1",
