chore: preping for update

--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "name": "nomie-website-2020",
-  "version": "1.0.0",
-  "private": true,
+  "version": "1.0.1",
+  "author": {
+    "email": "support@happydata.org",
+    "name": "Brandon Corbin"
+  },
+  "license": "MIT",
+  "private": false,
   "scripts": {
     "dev": "nuxt-ts",
     "build": "nuxt-ts build",
@@ -13,8 +18,6 @@
     "@nuxt/content": "^1.9.0",
     "@nuxt/typescript-runtime": "^2.0.0",
     "@nuxtjs/axios": "^5.12.2",
-    "core-js": "^3.6.5",
-    "js-file-downloader": "^1.1.15",
     "nuxt": "^2.14.6"
   },
   "devDependencies": {
@@ -28,6 +31,8 @@
     "@vue/test-utils": "^1.1.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^26.5.0",
+    "core-js": "^3.6.5",
+    "js-file-downloader": "^1.1.15",
     "dayjs": "^1.9.5",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-prettier": "^3.1.4",
